<resources>
    <string name="app_name">Fault Rank</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_signIn">Sign In</string>

    <string name="fault_list">Fault List</string>
    <string name="add_fault">Add Fault</string>

    <string name="businessUnit">Business Unit</string>
    <string name="undertaking">Undertaking</string>
    <string name="revenue">Revenue</string>
    <string name="energy" translatable="false">KWh</string>
    <string name="customers">Customers</string>
    <string name="date">Date</string>
    <string name="note">Add a Note&#8230;</string>
    <string name="faultType">Fault</string>
    <string name="cost">Cost</string>
    <string name="market_efficiency">Market Efficiency</string>
    <string name="availability">Availability</string>
    <string name="location">Location</string>

    <!--Business Units-->
    <string name="bu_ikeja" translatable="false">Ikeja</string>
    <string name="bu_shomolu" translatable="false">Shomolu</string>

    <!--Faults-->
    <string name="fault_line">Line Fault</string>
    <string name="fault_cable">Cable Fault</string>
    <string name="fault_transformer">Transformer Fault</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
