<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.7">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/add_fault_padding"
        android:paddingEnd="@dimen/add_fault_padding">

        <android.support.v7.widget.CardView
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/add_fault_image_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteX="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:id="@+id/add_fault_image" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_fault_image_option"
            app:layout_constraintTop_toBottomOf="@+id/add_fault_image_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="2dp"
            tools:layout_editor_absoluteX="101dp">

            <RelativeLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_menu_gallery"
                    android:id="@+id/goto_gallery"
                    android:layout_alignParentStart="true" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_add_a_photo"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="@dimen/add_fault_item_margin"
                    android:layout_alignBaseline="@+id/goto_gallery"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/add_info_card"
            app:layout_constraintTop_toBottomOf="@+id/add_fault_image_option"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:layout_marginTop="@dimen/add_fault_item_margin"
            tools:layout_editor_absoluteX="0dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="wrap_content"
                        android:minWidth="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/add_bu_spinner"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="@dimen/add_fault_item_margin"
                        android:hint="@string/businessUnit"
                        android:drawableStart="@drawable/ic_business"
                        android:drawablePadding="@dimen/add_fault_item_margin"
                        android:focusable="false"
                        tools:layout_editor_absoluteX="92dp"
                        android:alpha="1"/>


                    <EditText
                        android:layout_width="wrap_content"
                        android:minWidth="200dp"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:id="@+id/add_undertaking"
                        app:layout_constraintTop_toBottomOf="@+id/add_bu_spinner"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:drawableStart="@drawable/ic_account_balance"
                        android:drawablePadding="@dimen/add_fault_item_margin"
                        android:hint="@string/undertaking"
                        tools:layout_editor_absoluteX="92dp" />



                    <EditText
                        android:layout_width="wrap_content"
                        android:minWidth="200dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:id="@+id/add_revenue"
                        android:drawableStart="@drawable/ic_naira"
                        android:drawablePadding="@dimen/add_fault_item_margin"
                        android:hint="@string/revenue"
                        app:layout_constraintTop_toBottomOf="@+id/add_undertaking"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:layout_editor_absoluteX="92dp" />


                    <EditText
                        android:layout_width="wrap_content"
                        android:minWidth="200dp"
                        app:layout_constraintHorizontal_weight="1"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:id="@+id/add_energy"
                        android:drawableStart="@drawable/ic_lightbulb"
                        android:drawablePadding="@dimen/add_fault_item_margin"
                        android:hint="@string/energy"
                        app:layout_constraintTop_toBottomOf="@+id/add_revenue"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:layout_editor_absoluteX="92dp" />



                    <EditText
                        android:layout_width="wrap_content"
                        android:minWidth="200dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:id="@+id/add_num_customers"
                        android:drawableStart="@drawable/ic_people"
                        android:drawablePadding="@dimen/add_fault_item_margin"
                        android:hint="@string/customers"
                        app:layout_constraintTop_toBottomOf="@+id/add_energy"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:layout_editor_absoluteX="92dp" />


                    <EditText
                        android:layout_width="wrap_content"
                        android:minWidth="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/add_faultType"
                        app:layout_constraintTop_toBottomOf="@+id/add_num_customers"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:drawableStart="@drawable/ic_crack"
                        android:drawablePadding="@dimen/add_fault_item_margin"
                        android:focusable="false"
                        android:hint="@string/faultType"
                        tools:layout_editor_absoluteX="92dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:minWidth="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/add_cost"
                    app:layout_constraintTop_toBottomOf="@+id/add_faultType"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:drawableStart="@drawable/ic_naira_cost"
                    android:drawablePadding="@dimen/add_fault_item_margin"
                    android:hint="@string/cost"
                    tools:layout_editor_absoluteX="92dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:minWidth="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="datetime"
                    android:id="@+id/add_date"
                    android:drawableStart="@drawable/ic_date_range"
                    android:drawablePadding="@dimen/add_fault_item_margin"
                    android:hint="@string/date"
                    app:layout_constraintTop_toBottomOf="@+id/add_cost"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:focusable="false"
                    tools:layout_editor_absoluteX="92dp" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/add_info_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/add_fault_item_margin"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp">

            <EditText
                android:id="@+id/add_fault_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note"
                android:inputType="textMultiLine"
                android:minLines="6"
                android:maxLines="6"
                android:isScrollContainer="true"
                android:layout_margin="@dimen/add_fault_item_margin"/>

        </android.support.v7.widget.CardView>


    </android.support.constraint.ConstraintLayout>
</ScrollView>